fix configuration screen left alignment bug

--- a/style.css
+++ b/style.css
@@ -234,8 +234,9 @@ p:hover {
 }
 
 #configuration{
-  margin-top: 24px;
+  margin-top: 7%;
   width: 760px;
+
 }
 
 #config_title{
